--- a/_themes/atoum/layout.html
+++ b/_themes/atoum/layout.html
@@ -34,9 +34,7 @@
   {% endif %}
 
   {# RTD hosts this file, so just load on non RTD builds #}
-  {% if not READTHEDOCS %}
-    <link rel="stylesheet" href="{{ pathto('_static/' + style, 1) }}" type="text/css" />
-  {% endif %}
+  <link rel="stylesheet" href="{{ pathto('_static/' + style, 1) }}" type="text/css" />
 
   {% for cssfile in css_files %}
     <link rel="stylesheet" href="{{ pathto(cssfile, 1) }}" type="text/css" />
@@ -80,6 +78,8 @@
 </head>
 
 <body class="wy-body-for-nav" role="document">
+
+  {% include "menu_atoum.html" %}
 
   <div class="wy-grid-for-nav">
 
