use atoum's website background

--- a/_themes/atoum/layout.html
+++ b/_themes/atoum/layout.html
@@ -75,6 +75,11 @@
   {# Keep modernizr in head - http://modernizr.com/docs/#installing #}
   <script src="{{ pathto('_static/js/modernizr.min.js', 1) }}"></script>
 
+  <style type="text/css">
+    .wy-side-nav-search, .wy-nav-content-wrap  {
+     background: url('_static/background.jpg') repeat fixed 0% 0% / cover transparent;
+    }
+  </style>
 </head>
 
 <body class="wy-body-for-nav" role="document">
