improve header integration

--- a/_themes/atoum/layout.html
+++ b/_themes/atoum/layout.html
@@ -77,7 +77,29 @@
 
   <style type="text/css">
     .wy-side-nav-search, .wy-nav-content-wrap  {
-     background: url('_static/background.jpg') repeat fixed 0% 0% / cover transparent;
+       background: url('_static/background.jpg') repeat fixed 0% 0% / cover transparent;
+    }
+
+    .rst-content > div[role="navigation"] {
+       margin: -26px -52px;
+       background-color:  rgba(111, 95, 93, 1);
+       color: #FFF;
+    }
+
+    .rst-content > div[role="navigation"] ul {
+       padding: 5px 10px;
+    }
+
+    .rst-content > div[role="navigation"] hr {
+       margin: 0;
+    }
+
+    .rst-content > div[role="navigation"] ul, .rst-content div[role="navigation"] ul a {
+       color: #fff;
+    }
+
+   .rst-content .document div[itemprop="articleBody"] {
+       padding: 45px 0 0 0;
     }
   </style>
 </head>
