--- a/_themes/atoum/layout.html
+++ b/_themes/atoum/layout.html
@@ -114,13 +114,36 @@
       margin: 10px 0;
     }
 
-    .translations-list a {
+    .translations-list a, .downloads a {
        color: #9D5C57;
        text-decoration: none;
        padding: 0.2em 0.2em 0.15em;
        background: none repeat scroll 0% 0% #F5F2E7;
        display: inline-block;
        margin: 0 5px;
+    }
+
+    .downloads {
+      position: fixed;
+      bottom: 0px;
+      left: 0px;
+      width: 300px;
+      color: #FCFCFC;
+      background: none repeat scroll 0% 0% #1F1D1D;
+      border-top: 10px solid #343131;
+      font-family: "Lato","proxima-nova","Helvetica Neue",Arial,sans-serif;
+      z-index: 400;
+    }
+
+    .downloads a {
+      text-transform: uppercase;
+      font-size: 70%;
+      margin: 10px 5px;
+    }
+
+    .downloads-title {
+      margin-left: 10px;
+      display: inline-block;
     }
   </style>
 </head>
