--- a/_themes/atoum/versions.html
+++ b/_themes/atoum/versions.html
@@ -1,6 +1,13 @@
 {% if READTHEDOCS %}
+<div class="downloads">
+    <span class="downloads-title">Download :</span>
+    {% for type, url in downloads %}
+      <a href="{{ url }}">{{ type }}</a>
+    {% endfor %}
+</div>
+
 {# Add rst-badge after rst-versions for small badge style. #}
-  <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions">
+  <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions" style="display:none">
     <span class="rst-current-version" data-toggle="rst-current-version">
       <span class="fa fa-book"> Downloads and translations</span>
       <span class="fa fa-caret-down"></span>
