use the same link notation than the website

--- a/_themes/atoum/layout.html
+++ b/_themes/atoum/layout.html
@@ -114,7 +114,10 @@
       margin: 10px 0;
     }
 
-    .translations-list a, .downloads a {
+    .translations-list a,
+    .downloads a,
+    .rst-content .document a,
+    .rst-content .document a:visited {
        color: #9D5C57;
        text-decoration: none;
        padding: 0.2em 0.2em 0.15em;
