update note and warning colors

--- a/_themes/atoum/layout.html
+++ b/_themes/atoum/layout.html
@@ -148,6 +148,22 @@
       margin-left: 10px;
       display: inline-block;
     }
+
+    .admonition.note {
+      background-color: rgba(252, 218, 186, 0.3);
+    }
+
+    .admonition.warning {
+      background-color: rgba(252, 218, 186, 1);
+    }
+
+    .admonition.note .admonition-title {
+      background-color: rgba(131, 93, 91, 0.6);
+    }
+
+    .admonition.warning .admonition-title {
+      background-color: rgba(213, 22, 12, 0.6);
+    }
   </style>
 </head>
 
